--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "xos.url",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "URL parser for xos",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
